# hibana

./: .gitignore  Cargo.toml  GUIDE.md  INTERNALS.md  README.md
.cargo/: config.toml
.github/allowlists/: endpoint-public-api.txt  g-public-api.txt  integration-public-api.txt  lib-public-api.txt  runtime-public-api.txt  substrate-public-api.txt
.github/maintainability/: near_ceiling_source_budget.tsv  owner_aggregate_budget.tsv  owner_budget.tsv  owner_partitions.tsv  owner_semantics.tsv  route_frontier_owner_files.txt  test_source_debt_allowlist.txt
.github/measurement_snapshots/: hibana-compile-pressure-budget.tsv  hibana-size-snapshot.json
.github/repo-tests/: Cargo.toml  build.rs
.github/scripts/: check_boundary_contracts.sh  check_causal_handoff_pressure.sh  check_ci_stack_cluster_tests.sh  check_compiled_descriptor_authority.sh  check_descriptor_streaming_hygiene.sh  check_direct_projection_binary.sh  check_endpoint_surface_owner.sh  check_exact_layout_hygiene.sh  check_final_form_measurements.sh  check_frozen_image_hygiene.sh  check_generated_lean_axioms.py  check_hibana_public_api.sh  check_huge_choreography_budget.sh  check_hygiene_roots_fail_closed.sh  check_kani.sh  check_kernel_monomorphization_quarantine.sh  check_lean_claim_surface.sh  check_lean_proofs.sh  check_lean_theorem_inventory.py  check_lowering_hygiene.sh  check_maintainability_budgets.sh  check_manifest_tests.sh  check_memory_control_matrix.sh  check_message_heavy_matrix.sh  check_message_monomorphization_hygiene.sh  check_mgmt_boundary.sh  check_miri.sh  check_no_custom_target_json.sh  check_no_generic_const_exprs.sh  check_no_nightly_features.sh  check_no_split_guard_literals.sh  check_no_std_build.sh  check_no_underscore_discards.sh  check_no_underscore_escape_hatches.sh  check_package_artifact.sh  check_pico_size_matrix.sh  check_pico_smoke.sh  check_plane_boundaries.sh  check_policy_surface_hygiene.sh  check_projection_surface_hygiene.sh  (+34 more)
.github/workflows/: quality-gates.yml
docs/spec/: compiled_image_layout.md  completion_policy.md  completion_report.md  descriptor_kernel.md  downstream_readiness.md  payload_plane.md  policy-semantics.md  policy_boundary.md  projection_witness.md  public_surface.md
examples/: custom_binding.rs  distributed_migration.rs  epf_adaptive_control.rs  mgmt_epf_control.rs  mgmt_epf_observe.rs  ping_pong.rs  tcp_tokio.rs  transactional_session.rs
examples/pico/: Cargo.toml
examples/support/: in_memory.rs
integration/cross-repo/: Cargo.toml  README.md  check_repo_split_hygiene.sh
integration/cross-repo/src/: lib.rs
integration/cross-repo/tests/: cross_repo_smoke.rs
internal/pico_smoke/: Cargo.toml  pico_smoke.ld
proofs/kani/: Cargo.toml  README.md  harness-inventory.json
proofs/lean/: ClaimSurface.lean  Hibana.lean  README.md  all-claim-surface.txt  claim-surface.txt  example-claim-surface.txt  generated-claim-surface.txt  lake-manifest.json  lakefile.toml  public-operation-generated-claim-surface.txt  runtime-generated-claim-surface.txt
proofs/unix-carrier/: Cargo.toml  README.md
src/: binding.rs  control.rs  diag.rs  eff.rs  endpoint.rs  epf.rs  g.rs  global.rs  integration.rs  lib.rs  local.rs  observe.rs  policy_runtime.rs  rendezvous.rs  resolver_audit.rs  runtime.rs  runtime_core.rs  session.rs  substrate.rs  transport.rs
src/control/: assoc.rs  automaton.rs  brand.rs  cap.rs  cluster.rs  handle.rs  lease.rs  types.rs
src/endpoint/: affine.rs  branch.rs  carrier.rs  control.rs  cursor.rs  delegate.rs  error.rs  flow.rs  futures.rs  meta.rs  ops.rs  public_types.rs  resolver.rs  send.rs  session.rs  tests.rs
src/epf/: dispatch.rs  host.rs  loader.rs  ops.rs  policy_replay_tests.rs  slot_contract.rs  verifier.rs  vm.rs  vm_ctx.rs
src/g/: role_projection.rs  source.rs  terms.rs
src/global/: const_dsl.rs  control_messages.rs  event_program.rs  event_program_cursor_tests.rs  event_program_generated_corpus_tests.rs  event_program_tests.rs  frame_labels.rs  label_eq.rs  message.rs  program.rs  role_program.rs  steps.rs  tests.rs  types.rs  typestate.rs  witness_impls.rs
src/integration/: buckets.rs  fluent.rs  session_kit.rs  tests.rs
src/observe/: check.rs  core.rs  event.rs  events.rs  facet.rs  ids.rs  local.rs  normalise.rs  scope.rs
src/rendezvous/: association.rs  capability.rs  core.rs  error.rs  port.rs  recv_frame_receipt.rs  slots.rs  splice.rs  tables.rs  topology.rs  types.rs  waiter.rs
src/runtime/: buckets.rs  config.rs  consts.rs  fluent.rs  mgmt.rs  session_kit.rs  tests.rs
src/runtime_core/: config.rs  consts.rs  layout.rs  resources.rs  unique_match.rs
src/session/: brand.rs  cluster.rs  lease.rs  types.rs
src/test_support/: abort_control.rs  lean_proof_export.rs  mod.rs  route_control_kinds.rs  snapshot_control.rs
src/transport/: context.rs  forward.rs  kani.rs  labels.rs  snapshot.rs  tests.rs  trace.rs  wire.rs
tests/: affine_progression.rs  callsite_regression.rs  cancel_rollback.rs  cap_normalise.rs  cursor_send_recv.rs  cursor_send_recv_codec_demux.rs  cursor_send_recv_direct_recv.rs  cursor_send_recv_send_recv.rs  cursor_send_recv_session_drop_wake.rs  cursor_send_recv_session_fault_cancel.rs  cursor_send_recv_session_forget_flow.rs  cursor_send_recv_session_forget_recv.rs  cursor_send_recv_session_forget_send.rs  cursor_send_recv_session_progress.rs  deep_scope_runtime.rs  distributed_splice.rs  docs_surface.rs  dynamic_route_scope_resolver.rs  facet_report.rs  huge_choreography_compile.rs  huge_choreography_resident.rs  huge_choreography_runtime.rs  integration_surface.rs  lane_lifecycle_tap.rs  lease_observe.rs  local_action.rs  local_only_hygiene.rs  loop_lane_share.rs  mgmt_epf_integration.rs  mgmt_facet_profile.rs  mgmt_graph.rs  mgmt_property.rs  miri_runtime_owner.rs  multinode_splice.rs  nested_loop_route.rs  nested_route_runtime.rs  no_default_rodata.rs  no_policy_route_transport_hint.rs  offer_branch_recv_evidence.rs  offer_decode_binding_regression.rs  (+32 more)
tests/common/: check_support.rs  mgmt_loop_support.rs  mod.rs  observe_support.rs
tests/cursor_send_recv/: codec_demux.rs  (+15 more)
(+1068 files in other folders)
