[package]
name          = "hibana"
version       = "0.1.0"
edition       = "2024"
description   = "Const-projected Affine MultiParty Session Types (MPST) for capability-driven runtimes"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/hibanaworks/hibana"
homepage      = "https://github.com/hibanaworks/hibana"
documentation = "https://docs.rs/hibana"
readme        = "README.md"
keywords      = ["mpst", "session-types", "no-std", "affine", "choreography"]
categories    = ["asynchronous", "concurrency", "embedded", "network-programming"]

[features]
default = []
std = []

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# No external dependencies - hibana core remains self-contained

[dev-dependencies]
futures = "0.3"
libc = "0.2"
serde_json = "1"
static_assertions = "1.1"
proptest = { version = "1", default-features = false, features = ["std"] }
trybuild = "1.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "net", "io-util"] }

[badges]
maintenance = { status = "actively-developed" }
