[package]
name          = "hibana"
version       = "0.8.0"
edition       = "2024"
rust-version  = "1.95"
description   = "Const-projected Affine Multiparty Session Types for choreography-first Rust protocols"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/hibanaworks/hibana"
homepage      = "https://github.com/hibanaworks/hibana"
documentation = "https://docs.rs/hibana"
readme        = "README.md"
keywords      = ["mpst", "session-types", "no-std", "affine", "choreography"]
categories    = ["asynchronous", "concurrency", "embedded", "network-programming"]
include       = [
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/hibana-header.svg",
    "/src/**",
    "/tests/**",
    "!/tests/docs_surface.rs",
    "!/tests/local_only_hygiene.rs",
    "!/tests/no_default_rodata.rs",
    "!/tests/public_surface_guards.rs",
    "!/tests/root_surface.rs",
    "!/tests/runtime_surface.rs",
    "!/tests/semantic_surface.rs",
    "!/tests/semantic_surface/**",
    "!/tests/transport_resolver_signal_surface.rs",
    "!/src/**/tests.rs",
    "!/src/**/tests/**",
    "!/src/**/*_tests.rs",
    "!/src/test_support/**",
    "!/src/endpoint/kernel/test_support/**",
]

[features]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hibana_repo_tests)'] }

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# No external dependencies - hibana core remains self-contained

[dev-dependencies]
futures = "0.3"
libc = "0.2"
static_assertions = "1.1"
trybuild = "1.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "net", "io-util"] }

[badges]
maintenance = { status = "actively-developed" }
