[package]
name = "hibana-cross-repo-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []

[dependencies]
hibana = { version = "0.1.0", git = "https://github.com/hibanaworks/hibana", rev = "b066079887f2d86d9266f3608321cfd860218aa0", default-features = false, features = ["std"] }
hibana-epf = { version = "0.1.0", git = "https://github.com/hibanaworks/hibana-epf", rev = "e0283f6a01dac137ca5a464b6196ac58774809b5", default-features = false, features = ["std"] }
hibana-mgmt = { version = "0.1.0", git = "https://github.com/hibanaworks/hibana-mgmt", rev = "4635b75afac0a58b0cd9958eaa0b50fc75e81085", default-features = false, features = ["std"] }
